--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Let's Rock!",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
