--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "i18next": "^21.9.1",
+    "yup": "^0.32.11"
   }
 }
