--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "i18next": "^21.9.1",
+    "on-change": "^4.0.2",
     "yup": "^0.32.11"
   }
 }
